--- a/NeutronMail/src/styles/helper-styles.css
+++ b/NeutronMail/src/styles/helper-styles.css
@@ -11,8 +11,22 @@
     flex: 1;
 }
 
+.col-2 {
+    display: flex;
+    flex-direction: column;
+    flex: 2;
+}
+
 .text-red {
     color: #fc2028;
+}
+
+.text-gray--5c {
+    color: #5c5c5c;
+}
+
+._700 {
+    font-weight: 700;
 }
 
 .mt-0 {
@@ -53,10 +67,39 @@
     height: 100%;
 }
 
+.text-align-end {
+    text-align: end;
+}
+
 .flex-container {
     display: flex;
 }
 
 .center {
     margin: 0 auto;
+}
+
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.span-image {
+    background-size: contain;
+    background-repeat: no-repeat;
+    display: flex;
 }
