--- a/NeutronMail/src/styles/helper-styles.css
+++ b/NeutronMail/src/styles/helper-styles.css
@@ -1,20 +1,5 @@
-.row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-}
-
-.column {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-}
-
-.col-2 {
-    display: flex;
-    flex-direction: column;
-    flex: 2;
+.grid {
+    display: grid;
 }
 
 .text-red {
@@ -46,9 +31,9 @@
     align-self: center !important;
 }
 
-.d-flex {
-    display: -ms-flexbox !important;
-    display: flex !important;
+.justify-self-end {
+    -ms-flex-item-align: center !important;
+    justify-self: end !important;
 }
 
 .nav-item {
@@ -60,7 +45,7 @@
     padding: 0;
 }
 
-.nav-link a {
+.nav-link span {
     margin: 0;
     display: block;
     width: 100%;
@@ -69,10 +54,6 @@
 
 .text-align-end {
     text-align: end;
-}
-
-.flex-container {
-    display: flex;
 }
 
 .center {
