--- a/NeutronMail/src/styles.css
+++ b/NeutronMail/src/styles.css
@@ -1,6 +1,16 @@
 @import "styles/helper-styles.css";
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web&display=swap');
 
+
+@font-face {
+    font-family: 'Titillium Web - Semi Bold';
+    src: url('assets/fonts/titillium-web.semibold-webfont.woff2') format('woff2'),
+    url('assets/fonts/titillium-web.semibold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -522,7 +532,7 @@ footer {
 }
 
 .footer-block {
-    width: 80vw;
+    width: 80%;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, auto);
 }
@@ -543,10 +553,14 @@ footer {
     border-top: 2px solid #b9b9b9;
 }
 
-.footer-block .footer-block__top-text,
+.footer-block .footer-block__top-text p,
 .footer-block .footer-block__top-image {
-    border-right: 2px solid #b9b9b9;
     padding-right: 25px;
+}
+
+.footer-block .footer-block__top-image,
+.footer-block .footer-block__top-text {
+    border-right: 2px solid #b9b9b9;
 }
 
 .footer-block .footer-block__top-image {
